KCEF implementation for Desktop